# konflux-ops

./: README.md  pyproject.toml  requirements.txt
examples/: sample-config.yaml
src/konflux_automation/: __init__.py  cli.py  config.py  kube.py  pipeline_editor.py  utils.py
src/konflux_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/konflux_automation/operations/: build.py  pipeline.py  releases.py  secrets.py
src/konflux_automation/resources/: application.py  base.py  component.py  image_repository.py  release.py  release_plan.py  release_plan_admission.py  secret.py
tests/: test_cli.py  test_kube.py  test_pipeline_editor.py  test_resources.py
